--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="card-container">
       <div class="qr-wrapper">
         <!-- <div class="qr-section"> -->
-          <img src="image-qr-code.png" class="img-qr" alt="img-qr"/>
+          <img src="image-qr-code.png" class="img-qr" alt="QR code for scanning">
           <!-- <div>
             <object data="QR.svg"></object></div> -->
         <!-- </div> -->
